<resources>
    <string name="app_name">counters</string>
    <string name="capture_cups_of_lattes_frapuccinos_or_anything_else_that_can_be_counted">Capture cups of lattes, frapuccinos, or anything else that can be counted.</string>
    <string name="get_started">Get started</string>
    <string name="counters">Counters</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="when_i_started_counting_my_blessings_my_whole_life_turned_around_willie_nelson">“When I started counting my blessings,\nmy whole life turned around.”\n—Willie Nelson</string>
    <string name="no_counters_yet">No counters yet</string>
    <string name="add_counter">+ Add counter</string>
    <string name="couldn_t_load_the_counters">Couldn’t load the counters</string>
    <string name="the_internet_connection_appears_to_be_offline">The Internet connection appears to be offline.</string>
    <string name="retry">Retry</string>
    <string name="update_internet">Couldn’t update the “Apples eaten” counter to 1</string>
    <string name="delete">Couldn’t delete the counter</string>
    <string name="create">Couldn’t create the counter</string>
    <string name="give_it_a_name_creative_block_see_examples">Give it a name. Creative block? See examples.</string>
    <string name="select_an_example_to_add_it_to_your_counters">Select an example to add it to your counters.</string>
</resources>