<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/counter_init"
    tools:context=".ui.">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_80dp"
        android:src="@drawable/ic_welcome_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/counters"
        android:layout_marginTop="@dimen/size_20dp"
        android:gravity="center"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_30dp"
        android:text="@string/capture_cups_of_lattes_frapuccinos_or_anything_else_that_can_be_counted"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"/>

    <Button
        android:id="@+id/btnInit"
        android:layout_width="@dimen/size_150dp"
        android:layout_height="@dimen/size_40dp"
        android:layout_marginTop="@dimen/size_80dp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif"
        android:textColor="@color/orange"
        android:background="@android:color/white"
        android:textSize="15sp"
        android:text="@string/get_started"
        android:layout_marginBottom="@dimen/size_80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>